# democicd

./: .gitignore  .pre-commit-config.yaml  Makefile  __init__.py  main.py  pylint.rc  pyproject.toml  requirements.in
.github/workflows/: pytest-ci.yml
src/democicd.egg-info/: PKG-INFO  SOURCES.txt
test/democicd/: test_cli.py
